--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,1 +1,16 @@
-<h1>Static file</h1>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Feature Demo</title>
+  </head>
+
+  <body>
+    <h2>Feature Demo</h2>
+
+    <ul>
+      <li><a href="counter">counter</a> (demonstrates sessions)</li>
+      <li><a href="ws">WebSockets</a></li>
+      <li><a href="any-other-url?foo=bar&x=42">any other url</a> (dumps the request map)</li>
+    </ul>
+  </body>
+</html>
