Introduce an SSE example

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,7 +10,8 @@
     <ul>
       <li><a href="counter">/counter</a> (demonstrates sessions)</li>
       <li><a href="any/url?foo=bar&x=42">/any/url?foo=bar&x=42</a> (dumps the request map)</li>
-      <li><a href="websocket.html">/websocket.html</a></li>
+      <li><a href="websocket.html">WebSockets</a></li>
+      <li><a href="sse.html">Server-Sent Events</a></li>
     </ul>
   </body>
 </html>
