--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,6 +12,7 @@
       <li><a href="any/url?foo=bar&x=42">/any/url?foo=bar&x=42</a> (dumps the request map)</li>
       <li><a href="websocket.html">WebSockets</a></li>
       <li><a href="sse.html">Server-Sent Events</a></li>
+      <li><a href="http-kit">async-handler</a> from <a href="http://www.http-kit.org/">HTTP Kit</a></li>
     </ul>
   </body>
 </html>
